[gd_scene load_steps=4 format=3 uid="uid://cb8f446hdjog8"]

[ext_resource type="Script" path="res://scenes/new_world.gd" id="1_raoat"]
[ext_resource type="Theme" uid="uid://5e15oeeud8lr" path="res://ui/theme.tres" id="2_2flcg"]

[sub_resource type="Theme" id="Theme_um4hc"]

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = -1
anchor_top = 0.008
anchor_right = 1.003
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -4.184
offset_right = -25.4561
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_um4hc")
script = ExtResource("1_raoat")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "Custom seed"

[node name="seed-input" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "seed will be chosen randomly"
editable = false

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_2flcg")
alignment = 1

[node name="car_butt" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Car mode"

[node name="cam_butt" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Creative cam mode"

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/car_butt" to="." method="_on_car_butt_pressed"]
[connection signal="pressed" from="VBoxContainer/cam_butt" to="." method="_on_cam_butt_pressed"]
